fixed alignment of desktop class items

--- a/desktop.css
+++ b/desktop.css
@@ -72,7 +72,13 @@
 }
 
 .desktop {
-  display: initial !important;
+  display: block !important;
+}
+.desktop.inline {
+  display: inline !important;
+}
+.desktop.flex {
+  display: flex !important;
 }
 .mobile {
   display: none !important;
